# diss

./: .gitignore  .gitmodules  Dockerfile  Makefile  build.sh  get-ip.sh  get-ros-version.sh  notes.sh  run-wayland.sh  run.sh  server.el
Acceleration without g 2024-11-27 06-16-18/: Raw Data.csv
Acceleration without g 2024-11-27 06-16-18/meta/: device.csv  time.csv
docker/: Dockerfile
docker/src/project/: CMakeLists.txt  package.xml
docker/src/project/launch/: project.launch.py
docker/src/project/src/: controller.cpp  phyphox_streamer.cpp
server/: app.js  control.html  dissert.html  proxy.py  run.sh
websocket-forwarder/: .gitignore  Makefile  guix.scm  main.c
ws_humble/: frames_2025-01-21_20.53.30.gv
ws_humble/src/project/: package.xml
ws_humble/src/project/launch/: project.launch.py
ws_humble/src/project/src/: controller.cpp  controller_main.cpp
