<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jack@todo.todo">jack</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>kortex_bringup</depend>
  <depend>kortex_driver</depend>
  <depend>kortex_description</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>kinova_gen3_lite_moveit_config</depend>
  <!-- <depend>ur</depend> -->
  <!-- <depend>ur_moveit_config</depend> -->
  <!-- <depend>ur_robot_driver</depend> -->
  <!-- <depend>ur_description</depend> -->
  <depend>moveit_servo</depend>
  <!-- <depend>moveit_resources_panda</depend> -->
  <!-- <depend>moveit_resources_panda_moveit_config</depend> -->
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
	<rclcpp_components>
      <node plugin="controller::Controller" />
	</rclcpp_components>
  </export>
</package>
